@@ -3,11 +3,13 @@ sudo: false
 matrix:
   include:
     - os: linux
-      env: PYTHON_VERSION=3.5
+      env: PYTHON_VERSION=3.5 FLAGS="-v -n 2"
     - os: linux
-      env: PYTHON_VERSION=3.6
+      env: PYTHON_VERSION=3.6 FLAGS="-v -n 2"
+    - os: linux
+      env: PYTHON_VERSION=3.6 FLAGS="-v --full -n 2"
     - os: osx
-      env: PYTHON_VERSION=3.5
+      env: PYTHON_VERSION=3.5 FLAGS="-v -n 2"
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       export OS="MacOSX";
@@ -32,7 +34,7 @@ install:
   - pip install --no-deps .
 script:
   - mkdir empty; cd empty; cp ../.coveragerc ./
-  - coverage run -m yam.tests -v -n 2
+  - coverage run -m yam.tests $FLAGS
 after_success:
   - coverage combine
   - bash <(curl -s https://codecov.io/bash)
